Updated to latest changes in the team + renamed to AUTHORS.txt

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,7 +1,6 @@
-Bogdan Roman (maintainer)
 Carolina Lindqvist (maintainer)
+Oliver Grabinski (maintainer)
 Simon Dumas (maintainer)
-Wojciech Wajerowicz (maintainer)
 
 Alejandra Garcia Rojas Martinez (author)
 Alexander Ulbrich (author)
@@ -18,6 +17,7 @@ Kenneth Pirman (author)
 Michaël Dupont (author)
 Mohameth François Sy (author)
 Natalia Stafeeva (author)
+Oliver Grabinski (author)
 Pierre-Alexandre Fonta (author)
 Samuel Kerrien (author)
 Sean Hill (author)
